--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Main  */
+/* General Styles */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -18,6 +18,7 @@ p {
     font-size: 16px;
 }
 
+/* Header and navigation styles */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -34,7 +35,7 @@ p {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -42,16 +43,16 @@ p {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-
+/* Background image */
 .hero {
     height: 800px;
     width: 100%;
@@ -61,6 +62,7 @@ p {
     background-position: center;
 }
 
+/* Main content */
 .content {
     width: 75%;
     display: inline-block;
@@ -102,6 +104,7 @@ p {
     font-size: 36px;
 }
 
+/* Benefits side bar */
 #benefits {
     margin-right: 20px;
     padding: 20px;
@@ -135,6 +138,7 @@ p {
     text-align: center;
 }
 
+/* Footer section */
 footer {
     padding: 30px;
     clear: both;
